use theme jekyll-minimal-mistake

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
-layout: default
-title: Home
+layout: home
+author_profile: true
 ---
-<h1>{{ "Hello World!" | downcase }}</h1>
+<!-- <h1>{{ "Hello World!" | downcase }}</h1>
 
-This is a rather plane blog webiste. It is still under processing.
+This is a rather plane blog webiste. It is still under processing. -->
